--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.card-overlay, .card-img {
+  width: 100%;
+  height: 100%; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -58,6 +62,10 @@ body {
       .about-us-right .description::first-letter {
         padding-left: 50px; }
 
+.gallery .cards-wrapper {
+  display: flex;
+  flex-wrap: wrap; }
+
 .logo {
   font-size: 70px;
   color: #d3ab55;
@@ -116,3 +124,55 @@ body {
   .main-btn:hover {
     background-color: #d3ab55;
     color: #262626; }
+
+.card {
+  height: 30vw;
+  width: 33.3333%;
+  position: relative;
+  overflow: hidden; }
+  .card:hover .card-overlay {
+    left: 0; }
+  .card-overlay {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    color: #fff;
+    background-color: rgba(211, 171, 85, 0.6);
+    z-index: 10;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.7s; }
+    .card-overlay-heading {
+      font-family: "Nunito", sans-serif;
+      font-size: 96px;
+      font-weight: 300;
+      letter-spacing: 2px;
+      text-transform: capitalize; }
+    .card-overlay-p {
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 30px;
+      margin-bottom: 30px;
+      font-weight: 300;
+      letter-spacing: 2px;
+      text-transform: capitalize; }
+    .card-overlay-btn {
+      width: 150px;
+      height: 40px;
+      color: #d3ab55;
+      background-color: #fff;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 14px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border: 1px solid #d3ab55;
+      border-radius: 30px;
+      outline: none;
+      cursor: pointer; }
+  .card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.9; }
