--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -58,3 +58,63 @@
     color: $color-dark;
   }
 }
+
+.card {
+  height: 30vw;
+  width: 33.3333%;
+  position: relative;
+  overflow: hidden;
+
+  &:hover .card-overlay {
+    left: 0;
+  }
+
+  &-overlay {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    color: $color-white;
+    background-color: rgba($color-primary, 0.6);
+    z-index: 10;
+    flex-direction: column;
+    @include flexLayout;
+    @extend %fullSpace;
+    transition: 0.7s;
+    &-heading {
+      font-family: $font-nunito;
+      font-size: 96px;
+      @include textStyles(capitalize);
+    }
+
+    &-p {
+      font-family: $font-josefinSans;
+      font-size: 30px;
+      margin-bottom: 30px;
+      @include textStyles(capitalize);
+    }
+
+    &-btn {
+      width: 150px;
+      height: 40px;
+      color: $color-primary;
+      background-color: $color-white;
+      font-family: $font-josefinSans;
+      font-size: 14px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border: 1px solid $color-primary;
+      border-radius: 30px;
+      outline: none;
+      cursor: pointer;
+    }
+  }
+
+  &-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.9;
+    @extend %fullSpace;
+  }
+}
