--- a/css/main.css
+++ b/css/main.css
@@ -21,21 +21,39 @@ body {
       position: fixed;
       left: -50vw;
       transition: left 0.8s cubic-bezier(1, 0, 0, 1); }
+      @media (max-width: 800px) {
+        .navbar-navigation-left {
+          display: none; } }
       .navbar-navigation-left .left-img {
         width: 50%;
         position: absolute;
         box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
         opacity: 0.7;
         border-radius: 10px; }
+        @media (max-width: 1300px) {
+          .navbar-navigation-left .left-img {
+            width: 55%; } }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img {
+            width: 65%; } }
       .navbar-navigation-left .left-img-1 {
         top: 15%;
         left: 15%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-1 {
+            left: 5%; } }
       .navbar-navigation-left .left-img-2 {
         top: 35%;
         left: 25%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-2 {
+            left: 15%; } }
       .navbar-navigation-left .left-img-3 {
         top: 55%;
         left: 35%; }
+        @media (max-width: 1000px) {
+          .navbar-navigation-left .left-img-3 {
+            left: 25%; } }
     .navbar-navigation-right {
       width: 50vw;
       height: 100vh;
@@ -46,6 +64,10 @@ body {
       align-items: center;
       justify-content: center;
       transition: right 0.8s cubic-bezier(1, 0, 0, 1); }
+      @media (max-width: 800px) {
+        .navbar-navigation-right {
+          width: 100vw;
+          right: -100vw; } }
     .navbar-navigation .nav-list-item {
       list-style: none; }
     .navbar-navigation .nav-list-link {
@@ -63,6 +85,9 @@ body {
       .navbar-navigation .nav-list-link:hover {
         color: #d3ab55;
         letter-spacing: 4px; }
+      @media (max-width: 600px) {
+        .navbar-navigation .nav-list-link {
+          font-size: 40px; } }
 
 .checkbox:checked ~ .navbar-navigation .navbar-navigation-left {
   left: 0; }
@@ -95,6 +120,12 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%); }
+    @media (max-width: 500px) {
+      .header .brand {
+        position: absolute;
+        top: 12%;
+        left: 50%;
+        transform: translate(-50%, -50%); } }
   .header-banner {
     text-align: center;
     position: absolute;
@@ -106,10 +137,19 @@ body {
   height: 90vh;
   display: flex;
   align-items: center; }
+  @media (max-width: 900px) {
+    .about-us {
+      height: 70vh; } }
   .about-us-left {
     width: 40%;
     position: relative;
     left: -200px; }
+    @media (max-width: 1300px) {
+      .about-us-left {
+        left: -150px; } }
+    @media (max-width: 800px) {
+      .about-us-left {
+        display: none; } }
     .about-us-left img {
       width: 100%;
       opacity: 0.7; }
@@ -120,12 +160,24 @@ body {
     align-items: center;
     padding: 0 100px;
     box-sizing: border-box; }
+    @media (max-width: 1300px) {
+      .about-us-right {
+        padding: 0 50px; } }
+    @media (max-width: 800px) {
+      .about-us-right {
+        width: 100%; } }
     .about-us-right .stars {
       margin: 30px 0; }
+      @media (max-width: 1000px) {
+        .about-us-right .stars {
+          margin: 15px 0; } }
     .about-us-right .star {
       font-size: 15px;
       color: #d3ab55;
       margin-left: 10px; }
+      @media (max-width: 1000px) {
+        .about-us-right .star {
+          font-size: 12px; } }
     .about-us-right .description {
       font-family: "Josefin Sans", sans-serif;
       font-size: 25px;
@@ -134,6 +186,15 @@ body {
       text-align: justify; }
       .about-us-right .description::first-letter {
         padding-left: 50px; }
+      @media (max-width: 1600px) {
+        .about-us-right .description {
+          font-size: 18px; } }
+      @media (max-width: 1000px) {
+        .about-us-right .description {
+          font-size: 14px; } }
+      @media (max-width: 500px) {
+        .about-us-right .description {
+          font-size: 12px; } }
 
 .gallery .cards-wrapper {
   display: flex;
@@ -145,6 +206,9 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column; }
+  @media (max-width: 500px) {
+    .footer {
+      padding: 40px 0; } }
   .footer-header {
     display: flex;
     align-items: center;
@@ -154,6 +218,10 @@ body {
     width: 300px;
     justify-content: space-between;
     margin-bottom: 70px; }
+    @media (max-width: 500px) {
+      .footer .social-media {
+        width: 200px;
+        margin-bottom: 40px; } }
     .footer .social-media-item {
       list-style: none; }
     .footer .social-media-link {
@@ -163,6 +231,12 @@ body {
       transition: color 0.7s; }
       .footer .social-media-link:hover {
         color: #d3ab55; }
+      @media (max-width: 1000px) {
+        .footer .social-media-link {
+          font-size: 35px; } }
+      @media (max-width: 500px) {
+        .footer .social-media-link {
+          font-size: 25px; } }
   .footer-copyright-paragraph {
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
@@ -170,6 +244,14 @@ body {
     font-weight: 300;
     letter-spacing: 2px;
     text-transform: capitalize; }
+    @media (max-width: 800px) {
+      .footer-copyright-paragraph {
+        width: 70%;
+        margin: auto;
+        text-align: center; } }
+    @media (max-width: 500px) {
+      .footer-copyright-paragraph {
+        font-size: 14px; } }
 
 .hamburger-menu {
   width: 40px;
@@ -178,6 +260,14 @@ body {
   top: 10%;
   right: 5%;
   z-index: 300; }
+  @media (max-width: 800px) {
+    .hamburger-menu {
+      width: 35px;
+      height: 35px; } }
+  @media (max-width: 500px) {
+    .hamburger-menu {
+      width: 25px;
+      height: 25px; } }
   .hamburger-menu .menu {
     display: flex;
     flex-direction: column;
@@ -190,6 +280,12 @@ body {
       background-color: #d3ab55;
       transform-origin: right;
       transition: all 0.5s 0.5s; }
+      @media (max-width: 800px) {
+        .hamburger-menu .menu-line {
+          height: 3px; } }
+      @media (max-width: 500px) {
+        .hamburger-menu .menu-line {
+          height: 2px; } }
 
 .logo {
   font-size: 70px;
@@ -199,9 +295,21 @@ body {
   height: 110px;
   border: 3px solid #d3ab55;
   border-radius: 50%;
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media (max-width: 1000px) {
+    .logo {
+      font-size: 50px;
+      height: 90px;
+      width: 90px; } }
+  @media (max-width: 500px) {
+    .logo {
+      height: 50px;
+      width: 50px;
+      font-size: 30px;
+      border-width: 2px; } }
 
 .main-name {
   font-family: "Nunito", sans-serif;
@@ -209,6 +317,13 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase; }
+  @media (max-width: 1000px) {
+    .main-name {
+      font-size: 40px; } }
+  @media (max-width: 500px) {
+    .main-name {
+      font-size: 20px;
+      text-align: center; } }
 
 .sub-name {
   font-family: "Josefin Sans", sans-serif;
@@ -218,6 +333,10 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase; }
+  @media (max-width: 500px) {
+    .sub-name {
+      font-size: 12px;
+      text-align: center; } }
 
 .main-heading {
   font-family: "Dancing Script", cursive;
@@ -225,13 +344,39 @@ body {
   font-weight: 300;
   color: #d3ab55;
   margin-bottom: 40px; }
+  @media (max-width: 1600px) {
+    .main-heading {
+      font-size: 80px; } }
+  @media (max-width: 1000px) {
+    .main-heading {
+      font-size: 60px; } }
+  @media (max-width: 500px) {
+    .main-heading {
+      font-size: 40px;
+      margin-bottom: 20px; } }
 
 .sub-heading {
   font-family: "Josefin Sans", sans-serif;
   font-size: 40px;
   font-weight: 300;
   color: #bbb;
-  margin-bottom: 80px; }
+  margin-bottom: 80px;
+  text-align: center; }
+  @media (max-width: 1600px) {
+    .sub-heading {
+      font-size: 30px;
+      margin-bottom: 50px; } }
+  @media (max-width: 1300px) {
+    .sub-heading {
+      font-size: 40px;
+      margin-bottom: 30px; } }
+  @media (max-width: 1000px) {
+    .sub-heading {
+      font-size: 20px; } }
+  @media (max-width: 500px) {
+    .sub-heading {
+      font-size: 20px;
+      margin-bottom: 10px; } }
 
 .main-btn {
   width: 170px;
@@ -249,6 +394,16 @@ body {
   .main-btn:hover {
     background-color: #d3ab55;
     color: #262626; }
+    @media (max-width: 800px) {
+      .main-btn:hover {
+        width: 150px;
+        height: 35px;
+        font-size: 12px; } }
+    @media (max-width: 500px) {
+      .main-btn:hover {
+        width: 130px;
+        height: 30px;
+        font-size: 10px; } }
 
 .card {
   height: 30vw;
@@ -275,6 +430,15 @@ body {
       font-weight: 300;
       letter-spacing: 2px;
       text-transform: capitalize; }
+      @media (max-width: 900px) {
+        .card-overlay-heading {
+          font-size: 35px; } }
+      @media (max-width: 650px) {
+        .card-overlay-heading {
+          font-size: 25px; } }
+      @media (max-width: 500px) {
+        .card-overlay-heading {
+          display: none; } }
     .card-overlay-p {
       font-family: "Josefin Sans", sans-serif;
       font-size: 30px;
@@ -282,6 +446,15 @@ body {
       font-weight: 300;
       letter-spacing: 2px;
       text-transform: capitalize; }
+      @media (max-width: 900px) {
+        .card-overlay-p {
+          font-size: 20px; } }
+      @media (max-width: 650px) {
+        .card-overlay-p {
+          font-size: 15px; } }
+      @media (max-width: 500px) {
+        .card-overlay-p {
+          display: none; } }
     .card-overlay-btn {
       width: 150px;
       height: 40px;
@@ -296,6 +469,16 @@ body {
       border-radius: 30px;
       outline: none;
       cursor: pointer; }
+      @media (max-width: 900px) {
+        .card-overlay-btn {
+          font-size: 12px;
+          width: 130px;
+          height: 30px; } }
+      @media (max-width: 650px) {
+        .card-overlay-btn {
+          font-size: 10px;
+          width: 100px;
+          height: 30px; } }
   .card-img {
     width: 100%;
     height: 100%;
