--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -7,6 +7,16 @@
   right: 5%;
   z-index: 300;
 
+  @media (max-width: 800px) {
+    width: 35px;
+    height: 35px;
+  }
+
+  @media (max-width: 500px) {
+    width: 25px;
+    height: 25px;
+  }
+
   .menu {
     @extend %fullSpace;
     display: flex;
@@ -21,6 +31,14 @@
       background-color: $color-primary;
       transform-origin: right;
       transition: all 0.5s 0.5s;
+
+      @media (max-width: 800px) {
+        height: 3px;
+      }
+
+      @media (max-width: 500px) {
+        height: 2px;
+      }
     }
   }
 }
@@ -33,13 +51,36 @@
   height: 110px;
   border: 3px solid $color-primary;
   border-radius: 50%;
+  text-decoration: none;
   @include flexLayout;
+
+  @media (max-width: 1000px) {
+    font-size: 50px;
+    height: 90px;
+    width: 90px;
+  }
+
+  @media (max-width: 500px) {
+    height: 50px;
+    width: 50px;
+    font-size: 30px;
+    border-width: 2px;
+  }
 }
 
 .main-name {
   font-family: $font-nunito;
   color: $color-secondary;
   @include textStyles;
+
+  @media (max-width: 1000px) {
+    font-size: 40px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 20px;
+    text-align: center;
+  }
 }
 
 .sub-name {
@@ -48,6 +89,11 @@
   color: $color-secondary;
   text-align: center;
   @include textStyles;
+
+  @media (max-width: 500px) {
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 .main-heading {
@@ -56,6 +102,19 @@
   font-weight: 300;
   color: $color-primary;
   margin-bottom: 40px;
+
+  @media (max-width: 1600px) {
+    font-size: 80px;
+  }
+
+  @media (max-width: 1000px) {
+    font-size: 60px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
 }
 
 .sub-heading {
@@ -64,6 +123,26 @@
   font-weight: 300;
   color: $color-secondary;
   margin-bottom: 80px;
+  text-align: center;
+
+  @media (max-width: 1600px) {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+
+  @media (max-width: 1300px) {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+
+  @media (max-width: 1000px) {
+    font-size: 20px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
 
 .main-btn {
@@ -83,6 +162,18 @@
   &:hover {
     background-color: $color-primary;
     color: $color-dark;
+
+    @media (max-width: 800px) {
+      width: 150px;
+      height: 35px;
+      font-size: 12px;
+    }
+
+    @media (max-width: 500px) {
+      width: 130px;
+      height: 30px;
+      font-size: 10px;
+    }
   }
 }
 
@@ -107,10 +198,23 @@
     @include flexLayout;
     @extend %fullSpace;
     transition: 0.7s;
+
     &-heading {
       font-family: $font-nunito;
       font-size: 96px;
       @include textStyles(capitalize);
+
+      @media (max-width: 900px) {
+        font-size: 35px;
+      }
+
+      @media (max-width: 650px) {
+        font-size: 25px;
+      }
+
+      @media (max-width: 500px) {
+        display: none;
+      }
     }
 
     &-p {
@@ -118,6 +222,18 @@
       font-size: 30px;
       margin-bottom: 30px;
       @include textStyles(capitalize);
+
+      @media (max-width: 900px) {
+        font-size: 20px;
+      }
+
+      @media (max-width: 650px) {
+        font-size: 15px;
+      }
+
+      @media (max-width: 500px) {
+        display: none;
+      }
     }
 
     &-btn {
@@ -134,6 +250,18 @@
       border-radius: 30px;
       outline: none;
       cursor: pointer;
+
+      @media (max-width: 900px) {
+        font-size: 12px;
+        width: 130px;
+        height: 30px;
+      }
+
+      @media (max-width: 650px) {
+        font-size: 10px;
+        width: 100px;
+        height: 30px;
+      }
     }
   }
 
